--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     }
   </style>
   <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
